
wxBase

- compilation with wxUSE_ODBC=1 fixed (dbkeyg.h file was missing in the archive)
- bug in wxDateTime with timezones on systems with tm_gmtoff in struct tm fixed
- fixed bug in wxArray::Shrink() (Seth Manley)

wxGTK:

- added wxEVT_MENU_OPEN event generation
- fixed bug in generic file selector causing incomplete file extensions to
  be appended to filenames with no extension


2.4.0
-----

wxMSW:

- fixed loss of client data in wxChoice::SetString()

wxGTK:

- fixed wxMenu::Remove (John Skiff and Benjamin Williams)

All:

- Improved contrib/utils/convertrc parsing (David J. Cooke)
- Fixed handling of URLs and filenames in wxFileSystem
- Implemented alignment for wxGrid bool editor and renderer

2.3.4
-----

All:

- added (partial) Indonesian translations (Bambang Purnomosidi D. P.)
- added wxSizer::Show()/Hide() (Carl Godkin)
- fixed bugs in wxDateTime::SetToWeekDay()/GetWeek()

Unix (Base/GUI):

- minor OpenBSD compilation/linking fixes, now builds OOB under OpenBSD 3.1
- don't include -I/usr/include nor -I/usr/local/include in wx-config output
- shared library symbols are now versioned on platforms that support it (Linux)

wxGTK:

- Further work for GTK 2.0 and Unicode support.
- Addition of native frame site grip.

wxX11:

- Unicode support through Pango library.

wxMSW:

- fixed crashes in wxListCtrl under XP
- added context menu for rich edit wxTextCtrl

wxHTML:

- fixed wxHTML to work in Unicode build

2.3.3
-----

wxBase:

- building wxBase with Borland C++ is now supported (Michael Fieldings)
- wxSemaphore class added, many fixed to wxCondition and wxThread (K.S. Sreeram)
- fixes to the command line parsing error and usage messages
- modified wxFileName::CreateTempFileName() to open the file atomically
  (if possible) and, especially, not to leak the file descriptors under Unix
- memory leak in wxHTTP fixed (Dimitri)
- fixes to AM_PATH_WXCONFIG autoconf macro
- added wxHashMap class that replaces type-unsafe wxHashTable and is modelled